# YEBELO-Technology-Project

./: .gitignore  README.md  console-config.yml  docker-compose.yml
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/src/: main.rs
frontend/: README.md
ingestion/: producer.py  trades_data.csv
