[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.34", features = ["cmake-build"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
